WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285567
Fix RenderListBox painting in sideways-lr writing mode
https://bugs.webkit.org/show_bug.cgi?id=285567
Summary
Fix RenderListBox painting in sideways-lr writing mode
Tim Nguyen (:ntim)
Reported
2025-01-07 18:11:32 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-07 18:24:18 PST
<
rdar://problem/142517794
>
Tim Nguyen (:ntim)
Comment 2
2025-01-07 18:28:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38692
EWS
Comment 3
2025-01-08 08:09:36 PST
Committed
288601@main
(a4ab9b733b94): <
https://commits.webkit.org/288601@main
> Reviewed commits have been landed. Closing PR #38692 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug