Fix RenderListBox painting in sideways-lr writing mode https://bugs.webkit.org/show_bug.cgi?id=285567 rdar://142517794

Reviewed by Aditya Keerthi.

Perform rotations / translations as needed in sideways-lr writing mode.

Reference testing is hard here unfortunately, given the scrollbar (which always shows) side changes with the writing mode.

* Source/WebCore/rendering/RenderFileUploadControl.cpp:
(WebCore::RenderFileUploadControl::paintControl): Drive-by clean-up.
* Source/WebCore/rendering/RenderListBox.cpp:
(WebCore::itemOffsetForAlignment):
(WebCore::RenderListBox::paintItemForeground):

Canonical link: https://commits.webkit.org/288601@main